--- a/fonts/flaticon/font/_flaticon.scss
+++ b/fonts/flaticon/font/_flaticon.scss
@@ -1,12 +1,13 @@
     /*
     Flaticon icon font: Flaticon
-    Creation date: 06/10/2018 08:32
+    Creation date: 20/03/2019 02:18
     */
 
     @font-face {
   font-family: "Flaticon";
   src: url("./Flaticon.eot");
   src: url("./Flaticon.eot?#iefix") format("embedded-opentype"),
+       url("./Flaticon.woff2") format("woff2"),
        url("./Flaticon.woff") format("woff"),
        url("./Flaticon.ttf") format("truetype"),
        url("./Flaticon.svg#Flaticon") format("svg");
@@ -36,10 +37,18 @@
   font-smoothing: antialiased;
     }
 
-    .flaticon-layers:before { content: "\f100"; }
-.flaticon-compass-symbol:before { content: "\f101"; }
-.flaticon-idea:before { content: "\f102"; }
+    .flaticon-ideas:before { content: "\f100"; }
+.flaticon-flasks:before { content: "\f101"; }
+.flaticon-analysis:before { content: "\f102"; }
+.flaticon-ux-design:before { content: "\f103"; }
+.flaticon-web-design:before { content: "\f104"; }
+.flaticon-idea:before { content: "\f105"; }
+.flaticon-innovation:before { content: "\f106"; }
     
-    $font-Flaticon-layers: "\f100";
-    $font-Flaticon-compass-symbol: "\f101";
-    $font-Flaticon-idea: "\f102";
+    $font-Flaticon-ideas: "\f100";
+    $font-Flaticon-flasks: "\f101";
+    $font-Flaticon-analysis: "\f102";
+    $font-Flaticon-ux-design: "\f103";
+    $font-Flaticon-web-design: "\f104";
+    $font-Flaticon-idea: "\f105";
+    $font-Flaticon-innovation: "\f106";
